--- a/condmyapp/src/main/resources/templates/login.html
+++ b/condmyapp/src/main/resources/templates/login.html
@@ -3,10 +3,15 @@
 <head>
     <title>Login</title>
     <meta charset="UTF-8">
+  <!--  <meta name="_csrf" th:content="${_csrf.token}"/>
+	<meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+   --> 
+   
 </head>
 <body>
     <h2>Login</h2>
     <form th:action="@{/login}" method="post">
+       <!--  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" /> -->
         <label>Usuário:</label>
         <input type="text" name="username" required><br>
         <label>Senha:</label>
@@ -14,5 +19,6 @@
         <button type="submit">Entrar</button>
         <div th:if="${param.error}">Usuário ou senha inválidos.</div>
     </form>
+    <a th:href="@{/register}">Registrar</a>
 </body>
 </html>
