--- a/condmyapp/src/main/resources/templates/home/index.html
+++ b/condmyapp/src/main/resources/templates/home/index.html
@@ -7,7 +7,7 @@
 	<div class="d-sm-flex align-items-center justify-content-between mb-4">
 		 <h1 class="h3 mb-0 text-gray-800">
             Olá, 
-            <span th:text="${#authentication.principal.fullName}"></span>!
+            <span sec:authentication="principal.fullName"></span>!
             Seja bem-vindo à sua área administrativa.
         </h1>
 	</div>
