--- a/condmyapp/src/main/resources/templates/fragments/footer.html
+++ b/condmyapp/src/main/resources/templates/fragments/footer.html
@@ -23,25 +23,6 @@
 <a class="scroll-to-top rounded" href="#page-top"> <i
 	class="fas fa-angle-up"></i>
 </a>
-<div class="modal fade" id="errorModal" tabindex="-1" aria-hidden="true">
-	<div class="modal-dialog modal-dialog-centered">
-		<div class="modal-content">
-			<div class="modal-header bg-danger text-white">
-				<h5 class="modal-title">Erro</h5>
-				<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-			</div>
-			<div class="modal-body">
-				<p id="errorModalMessage">Erro inesperado</p>
-			</div>
-			<div class="modal-footer">
-				<button type="button" class="btn btn-secondary"
-					data-bs-dismiss="modal">Fechar</button>
-			</div>
-		</div>
-	</div>
-</div>
-
-
 
 <!-- Logout Modal-->
 <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog"
@@ -49,30 +30,26 @@
 	<div class="modal-dialog" role="document">
 		<div class="modal-content">
 			<div class="modal-header">
-				<h5 class="modal-title" id="exampleModalLabel">Encerrar sessão</h5>
-				<button class="close" type="button" data-bs-dismiss="modal"
+				<h5 class="modal-title" id="exampleModalLabel">Logout</h5>
+				<button class="close" type="button" data-dismiss="modal"
 					aria-label="Close">
 					<span aria-hidden="true">×</span>
 				</button>
 			</div>
 			<div class="modal-body">Deseja encerrar a sessão?</div>
 			<div class="modal-footer">
-				<button class="btn btn-secondary" type="button"
-					data-bs-dismiss="modal">Não</button>
-
-				<!-- FORMULÁRIO POST PARA LOGOUT -->
+				<button class="btn btn-secondary" type="button" data-dismiss="modal">Não</button>				
 				<form th:action="@{/logout}" method="post" class="d-inline">
 					<input type="hidden" th:name="${_csrf.parameterName}"
 						th:value="${_csrf.token}" />
 					<button type="submit" class="btn btn-primary">Sim</button>
 				</form>
-
 			</div>
 		</div>
 	</div>
 </div>
 
-<!-- jQuery (necessário para o DataTables funcionar) -->
+<!-- Bootstrap JS -->
 <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
 <!-- Carregar a biblioteca do jQuery Mask
 <script th:src="@{/js/jquery.mask.min.js}"></script> -->
