--- a/condmyapp/src/main/resources/templates/fragments/header-login.html
+++ b/condmyapp/src/main/resources/templates/fragments/header-login.html
@@ -2,26 +2,23 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
-
 <title>Gerenciamento Condomínio - Login</title>
-    <!-- Custom fonts for this template -->
-    <link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link th:href="@{/css/bootstrap-icons.min.css}" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template -->
-    <link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet" type="text/css">
-    <link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css"> -->
-    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet" type="text/css">
-    <link rel="icon" type="image/x-icon"  th:href="@{/favicon.ico}">
+<!-- Custom fonts for this template -->
+<link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" rel="stylesheet">
+<link th:href="@{/css/bootstrap-icons.min.css}" rel="stylesheet" type="text/css">
+<!-- Custom styles for this template -->
+<link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" type="text/css">
+
+<link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet" type="text/css">
+<link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
 </head>
 
 <body class="bg-gradient-primary">
