--- a/condmyapp/src/main/resources/templates/fragments/header.html
+++ b/condmyapp/src/main/resources/templates/fragments/header.html
@@ -6,18 +6,27 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
 <title>Gerenciamento Condomínio</title>
-    <!-- Custom fonts for this template -->
-    <link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-    <link th:href="@{/css/bootstrap-icons.min.css}" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template -->
-    <link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet" type="text/css">
-    <link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css"> -->
-    <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet" type="text/css">
-    <link rel="icon" type="image/x-icon"  th:href="@{/favicon.ico}">
+<!-- Custom fonts for this template -->
+<link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
+<link
+	href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+	rel="stylesheet">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+	rel="stylesheet">
+<!-- Custom styles for this template -->
+<link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet"
+	type="text/css">
+<link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet"
+	type="text/css">
+<!-- Custom styles for this template
+<link rel="stylesheet" href="/static/css/bootstrap.min.css"> -->
+<link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet"
+	type="text/css">
+<link rel="icon" type="image/x-icon" th:href="@{/favicon.ico}">
 </head>
 
 <body id="page-top">
@@ -128,11 +137,11 @@
 								</a>
 
 								<div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Sair
+                                </a>
 
-								<a class="dropdown-item" href="/logout"> <i
-									class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-									Sair
-								</a>
 							</div></li>
 					</ul>
 				</nav>
