--- a/condmyapp/src/main/resources/templates/login.html
+++ b/condmyapp/src/main/resources/templates/login.html
@@ -34,15 +34,14 @@
 								for="remember">Lembrar Me</label>
 						</div>
 					</div>
-					<div th:if="${Erro != null}">
-						<div class="alert alert-danger text-center" role="alert"
-							th:text="${Erro}"></div>
-					</div>
+					<div th:if="${param.error}" class="alert alert-danger" th:text="${param.error[0]}"></div>
+					<div th:if="${param.logout}" class="alert alert-success">Você saiu do sistema.</div>
+					<div th:if="${param.expired}" class="alert alert-warning">Sessão expirada. Faça login novamente.</div>
 
-					<button type="submit" class="btn btn-primary btn-block"data-mdb-ripple-init>
-						Login</button>
+
+					<button type="submit" class="btn btn-primary btn-block"data-mdb-ripple-init> Login</button>
 					<hr>
-					<a href="" class="btn btn-google btn-block"> <i
+					<a href="/login" class="btn btn-google btn-block"> <i
 						class="fab fa-google fa-fw"></i> Login com Google
 					</a> <a href="" class="btn btn-facebook btn-block"> <i
 						class="fab fa-facebook-f fa-fw"></i> Login com Facebook
@@ -50,7 +49,7 @@
 				</form>
 				<hr>
 				<div class="text-center">
-					<a class="small" href="forgot-password.html">Resetar Password?</a>
+					<a class="small" th:href="@{/auth/alterarsenha}">Resetar Password?</a>
 				</div>
 				<div class="text-center">
 					<a class="small" href="register.html">Crie uma conta!</a>
