--- a/condmyapp/src/main/resources/templates/user/index.html
+++ b/condmyapp/src/main/resources/templates/user/index.html
@@ -3,26 +3,32 @@
 <!-- Begin Page Content -->
 <div class="container-fluid">
 
+	<!-- ✅ Toasts Bootstrap -->
+<div th:replace="~{fragments/messages :: messages}"></div>
+
 	<!-- Page Heading -->
 	<h1 class="h3 mb-2 text-gray-800">Administradores</h1>
 	<p class="mb-4">
 		Lista de administradores do sistema <a target="_blank" href="#">official
 			DataTables documentation</a>.
 	</p>
+
 	<!-- DataTales Example -->
 	<div class="card shadow mb-4">
 		<div class="card-header d-flex py-3">
 			<div class="col-4">
 				<a type="button"
 					sec:authorize="hasAnyAuthority('ADMINISTRADOR','GERENTE')"
-					th:href="@{/user/new}" class="btn btn-primary"
-					style="margin-bottom: 20px;">Cadastrar Novo</a>
+					th:href="@{/user/new}" class="btn btn-primary mb-2"><i class="bi bi-person-add mx-3"></i>Cadastrar
+					Novo</a>
 				<h6 class="m-0 font-weight-bold text-primary">Lista de Usuários</h6>
 			</div>
 		</div>
+
 		<div class="card-body">
 			<div class="table-responsive">
-				<table class="table table-sm table-bordered " id="dataTable" width="100%" cellspacing="0">
+				<table class="table table-sm table-bordered" id="dataTable"
+					width="100%" cellspacing="0">
 					<thead class="thead-light text-center">
 						<tr>
 							<th>ID</th>
@@ -43,49 +49,44 @@
 						<tr th:each="user : ${users}">
 							<td th:text="${user.id}" class="text-center"></td>
 							<td th:text="${user.firstName + ' ' + user.lastName}"></td>
-							<td th:text="${@maskUtils.maskCpf(user.cpf)}" class="text-center"></td>
+							<td th:text="${@maskUtils.maskCpfCripto(user.cpf)}" class="text-center"></td>
 							<td th:text="${user.email}" class="text-center"></td>
 							<td th:text="${@maskUtils.maskPhone(user.phone)}" class="text-center"></td>
 							<td th:text="${user.username}" class="text-center"></td>
 							<td th:text="${user.gender}" class="text-center"></td>
 							<td th:text="${user.status}" class="text-center"></td>
 							<td th:text="${user.userGroup}" class="text-center"></td>
-							<td th:text="${#temporals.format(user.createdAt, 'dd/MM/yyyy HH:mm:ss')}" class="text-center"></td>
+							<td
+								th:text="${#temporals.format(user.createdAt, 'dd/MM/yyyy HH:mm:ss')}"
+								class="text-center"></td>
 							<td th:text="${#strings.abbreviate(user.description, 100)}"></td>
 							<td class="text-center">
 								<div class="btn-group" role="group">
-									<!-- Botão Alterar (ADMINISTRADOR ou GERENTE) -->
+									<!-- Botão Alterar -->
 									<a type="button"
 										class="btn btn-outline-warning border-0 rounded"
-										fill="currentColor" data-bs-toggle="tooltip"
-										data-bs-placement="top" data-bs-title="Alterar"
 										sec:authorize="hasAnyAuthority('ADMINISTRADOR','GERENTE')"
-										th:href="@{'/user/' + ${user.id}}"> <img src="/img/icon_edit.png" width="20" height="20"  alt="Editar usuário" viewBox="0 0 20 20">
+										th:href="@{'/user/' + ${user.id}}"> <img
+										src="/img/icon_edit.png" width="20" height="20"
+										alt="Editar usuário">
 									</a>
-									<!-- Botão Excluir (apenas ADMINISTRADOR) -->
+									<!-- Botão Excluir -->
 									<a type="button"
 										class="btn btn-outline-danger border-0 rounded"
-										fill="currentColor" data-bs-toggle="tooltip"
-										data-bs-placement="top" data-bs-custom-class="custom-tooltip"
-										data-bs-title="Deletar"
-										sec:authorize="hasAnyAuthority('ADMINISTRADOR')"
-										th:onclick="'confirmarExclusao(\'' + @{/user/{id}/delete(id=${user.id})} + '\')'"
-										href="#"><img src="/img/icon_delete.png" width="20" height="20" alt="Deletar usuário" viewBox="0 0 20 20">
+										sec:authorize="hasAuthority('ADMINISTRADOR')"
+										th:onclick="'confirmarExclusao(\'' + @{/user/{id}/delete(id=${user.id})} + '\')'">
+										<img src="/img/icon_delete.png" width="20" height="20"
+										alt="Deletar usuário">
 									</a>
-									<!-- Botão Desbloquear (apenas ADMINISTRADOR e se bloqueadoTentativas == true) -->
+									<!-- Botão Desbloquear -->
 									<a type="button"
-									   class="btn btn-outline-secondary border-0 rounded"
-									   data-bs-toggle="tooltip"
-									   data-bs-placement="top"
-									   data-bs-custom-class="custom-tooltip"
-									   data-bs-title="Desbloquear"
-									   sec:authorize="hasAuthority('ADMINISTRADOR')"
-									   th:if="${user.status.name() == 'BLOQUEADO'}"
-									   th:onclick="'if(confirm(\'Usuário desbloqueado com sucesso!\')) {window.location.href = \'' + @{/user/{id}/desbloquear(id=${user.id})} + '\'}'"
-									   href="#"> <img th:src="@{/img/icon_locked.png}" alt="Ícone de bloqueio" width="20" height="20" alt="Desbloquear usuário" viewBox="0 0 20 20">
+										class="btn btn-outline-secondary border-0 rounded"
+										sec:authorize="hasAuthority('ADMINISTRADOR')"
+										th:if="${user.status.name() == 'BLOQUEADO'}"
+										th:href="@{/user/{id}/desbloquear(id=${user.id})}"> <img
+										src="/img/icon_locked.png" width="20" height="20"
+										alt="Desbloquear usuário">
 									</a>
-
-
 								</div>
 							</td>
 						</tr>
@@ -97,5 +98,6 @@
 	</div>
 
 </div>
+
 <!-- /.container-fluid -->
 <div th:replace="~{fragments/footer}"></div>
