Commit - Ajustes para resolver o bug no logout

--- a/condmyapp/src/main/resources/templates/fragments/footer.html
+++ b/condmyapp/src/main/resources/templates/fragments/footer.html
@@ -51,18 +51,13 @@
 
 <!-- Bootstrap JS -->
 <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
-<!-- Carregar a biblioteca do jQuery Mask
-<script th:src="@{/js/jquery.mask.min.js}"></script> -->
-<!-- Bootstrap core JavaScript-->
 <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-<!-- Core plugin JavaScript-->
+<!-- <script th:src="@{/js/jquery.mask.min.js}"></script> -->
 <script th:src="@{/js/jquery-easing/jquery.easing.min.js}" defer></script>
-<!-- Bootstrap JS (compatível com o layout, mas não essencial para o DataTables) -->
 <script th:src="@{/js/jquery.dataTables.min.js}" defer></script>
-<script th:src="@{/js/dataTables.bootstrap5.min.js}" defer></script>
+<script th:src="@{/js/dataTables.bootstrap4.min.js}" defer></script>
 <script th:src="@{/js/bootstrap-datepicker.min.js}" defer></script>
 <script th:src="@{/js/bootstrap-datepicker.pt-BR.min.js}" defer></script>
-<!-- Custom scripts for all pages-->
 <script th:src="@{/js/sb-admin-2.min.js}"></script>
 </body>
 
