--- a/condmyapp/src/main/resources/templates/fragments/header-login.html
+++ b/condmyapp/src/main/resources/templates/fragments/header-login.html
@@ -7,6 +7,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta http-equiv="Cache-Control" content="no-store, no-cache, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
 <title>Gerenciamento Condomínio - Login</title>
 <!-- Custom fonts for this template -->
 <link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -14,7 +17,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" rel="stylesheet">
 <link th:href="@{/css/bootstrap-icons.min.css}" rel="stylesheet" type="text/css">
 <!-- Custom styles for this template -->
-<link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/dataTables.bootstrap4.min.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet" type="text/css">
 
 <link th:href="@{/css/sb-admin-2.min.css}" rel="stylesheet" type="text/css">
