--- a/condmyapp/src/main/resources/templates/fragments/header.html
+++ b/condmyapp/src/main/resources/templates/fragments/header.html
@@ -8,6 +8,11 @@
 	content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="description" content="">
 <meta name="author" content="">
+<meta http-equiv="Cache-Control"
+	content="no-store, no-cache, must-revalidate, max-age=0">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
 <title>Gerenciamento Condomínio</title>
 <!-- Custom fonts for this template -->
 <link th:href="@{/css/all.min.css}" rel="stylesheet" type="text/css">
@@ -18,7 +23,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
 	rel="stylesheet">
 <!-- Custom styles for this template -->
-<link th:href="@{/css/dataTables.bootstrap5.min.css}" rel="stylesheet"
+<link th:href="@{/css/dataTables.bootstrap4.min.css}" rel="stylesheet"
 	type="text/css">
 <link th:href="@{/css/bootstrap-datepicker.min.css}" rel="stylesheet"
 	type="text/css">
@@ -137,11 +142,13 @@
 								</a>
 
 								<div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
-                                    Sair
-                                </a>
-
+								<a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+									<i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+									<form th:action="@{/logout}" method="post" class="d-inline">
+										<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+									</form>Sair
+								
+</a>
 							</div></li>
 					</ul>
 				</nav>
